syntax = "proto3";

package auth;

service AuthService {
  rpc Signup(SignupRequest) returns (SignupResponse);
  rpc Login(LoginRequest) returns (LoginResponse);
  rpc Refresh(RefreshRequest) returns (LoginResponse);
  rpc ValidateUser(ValidateUserRequest) returns (LoginResponse);
}

message SignupRequest {
  string firstName = 1;
  string lastName = 2;
  string email = 3;
  string password = 4;
  string phone = 5;
}

message SignupResponse {
  int32 id = 1;
  string email = 2;
  string firstName = 3;
  string lastName = 4;
  string phone = 5;
  string createdAt = 6;
  string updatedAt = 7;
}


message ClientInfo {
  string device = 1;
  string ipAddress = 2;
  string userAgent = 3;
  string os = 4;
}

message LoginRequest {
  string email = 1;
  string password = 2;
  ClientInfo clientInfo = 3; // optional
}

message LoginResponse {
  int32 id = 1;
  string email = 2;
  string firstName = 3;
  string lastName = 4;
  string phone = 5;
  string accessToken = 6;
  string refreshToken = 7;
  string createdAt = 8;
  string updatedAt = 9;
}

message RefreshRequest {
  string refreshToken = 1;
}

message ValidateUserRequest {
  string email = 1;
  string password = 2;
}

